update to fit TCK testDisconnectConnect (#429)
Signed-off-by: Mathieu DEHARBE <mathieu.deharbe@rte-france.com>